fix view height & header z-index

--- a/src/components/PanelHeader/PanelHeader_core.sass
+++ b/src/components/PanelHeader/PanelHeader_core.sass
@@ -1,5 +1,6 @@
 .vc-PanelHeader
   position: relative
+  z-index: 10
 
 
 .vc-PanelHeader--vis::before
