--- a/src/components/View/View.sass
+++ b/src/components/View/View.sass
@@ -1,5 +1,6 @@
 .vc-View
   min-height: 100vh
+  height: 100vh
 
 .vc-View__popout
   position: fixed
